fixed overflow not being set to hidden, more concise force field

--- a/src/app.css
+++ b/src/app.css
@@ -406,6 +406,7 @@ nav:hover .button-cta {
 
 .force-graph {
 	position: relative;
+	overflow: hidden;
 	box-sizing: border-box;
 	height: 100%;
 	width: 50%;
